--- a/driver-tests/shading/unshaded/pom.xml
+++ b/driver-tests/shading/unshaded/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>com.scylladb</groupId>
         <artifactId>scylla-driver-tests-shading</artifactId>
-        <version>3.11.0.0-SNAPSHOT</version>
+        <version>3.11.0.0</version>
     </parent>
 
     <artifactId>scylla-driver-tests-shading-unshaded</artifactId>
