--- a/driver-dist/pom.xml
+++ b/driver-dist/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>com.scylladb</groupId>
         <artifactId>scylla-driver-parent</artifactId>
-        <version>3.11.0.0</version>
+        <version>3.11.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>scylla-driver-dist</artifactId>
