--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.scylladb</groupId>
     <artifactId>scylla-driver-parent</artifactId>
-    <version>3.11.0.0</version>
+    <version>3.11.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Java Driver for Scylla and Apache Cassandra</name>
     <description>
@@ -1172,7 +1172,7 @@
         <connection>scm:git:https://github.com/scylladb/java-driver</connection>
         <developerConnection>scm:git:https://github.com/scylladb/java-driver</developerConnection>
         <url>https://github.com/scylladb/java-driver</url>
-        <tag>3.11.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
