--- a/driver-tests/osgi/pom.xml
+++ b/driver-tests/osgi/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>com.scylladb</groupId>
         <artifactId>scylla-driver-tests-parent</artifactId>
-        <version>3.11.0.1</version>
+        <version>3.11.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>scylla-driver-tests-osgi</artifactId>
